app/styles/app.scss
/* ... */
.banner {
  position: absolute;
  z-index: 10;
  box-sizing: border-box;
  top: 0;
  left: 0;
  width: 100%;
  background-color: #cbe1ca;
  padding: 1rem 2rem;
  display: flex;
  flex-direction: column;

  &--error {
    background-color: #f8c2c2;
  }

  &--success {
    background-color: #cbe1ca;
  }

  p {
    margin-top: 0.5rem;
    font-size: 12px;
  }

  .height-line {
    height: 17px;
    font-size: 12px;
  }

  &_title {
    display: flex;
    font-weight: 600;

    img {
      margin-right: 0.5rem;
    }
  }

  &_close {
    position: absolute;
    top: 0.25rem;
    right: 0.25rem;
  }
}

.qr-code {
  height: 0;
  width: 0;

  @media print {
    @page {
      marks: none;
    }

    visibility: visible;
    image-rendering: pixelated;
    width: 400px;
    height: 400px;
  }
}

.controls {
  display: flex;
  margin: 1rem 0;
  padding: 1rem 0;
  border-top: 2px solid #d8d8d8;
  border-bottom: 2px solid #d8d8d8;

  span {
    flex-grow: 1;
  }

  .toggle {
    width: 4rem;
    height: 1.5rem;
    background-color: #2c98ff;
    border: 1px solid #c2c2c2;
    border-radius: 0.8rem;

    &-off {
      background-color: #e30a0a;

      img {
        margin-left: 2px;
      }
    }

    &-on {
      background-color: #31872d;

      img {
        margin-left: 42px;
      }
    }

    img {
      margin-top: 2px;

      transition: margin-left 0.5s;
    }
  }
}

.instructions {
  max-width: 540px;
  margin: 2rem auto;
  width: calc(100vw - 4rem);

  p {
    margin: 1rem 0;
  }

  strong {
    font-weight: 600;
  }

  h1 {
    margin: 2rem 0;
    font-size: 1.5rem;
    font-weight: 600;
  }

  &_form {
    max-width: 360px;
  }
}





.ember-modal-overlay {
  background-color: rgba(0,0,0,0.8);
  opacity: 0;
  animation: fade .1s forwards;
}

.ember-modal-dialog {
  top: 174% !important;
  min-width: 100%;
  height: 85%;
  padding: 0;
  border-radius: 6px 6px 0 0;
  animation: slideUp .3s forwards;

  .header {
    display: inline-flex;
    width: 100%;
    font-size: 1.5rem;
    padding: 1rem 2rem;
    margin-bottom: 1rem;
    border-bottom: 1px solid #d8d8d8;
  }
  
  .subheader {
    padding-left: 2rem;
  }

  .btns-container {
    display: inline-flex;
    width: 100%;
    margin-top: 2rem;

    .cancel {
      color: #333333;
      margin-right: .5rem;
      background-color: #f6f6f6
    }

    .submit {
      margin-left: .5rem;
    }
  }

  .radio {
    display: flex;
    line-height: 1;
    padding-left: 2rem;
    margin: 1.5rem 0;

    input {
      width: 1.1rem;
      height: 1.1rem;
    }

    &--label {
      padding-left: .5rem;
      line-height: 1.5;
    }

    &.ventilation {
      margin: 2.5rem 0;
    }
  }

  .close-btn {
    position: absolute;
    right: 1rem;
  }

  button {
    margin: 0 2rem;
    width: calc(100% - 4rem);
  }

  .delete-container {
    display: flex;
    font-size: 12px;
    margin-left: 2rem;
    margin-top: 2rem;

    .text {
      position: relative;
      top: .25rem;
      font-size: 12px;
      padding-left: .5rem;
    }
  }
}

@keyframes fade {
  100% {
    opacity: 100;
  }
}

@keyframes slideUp {
  100% {
    top: 74%;
  }
}

.ward-details {
  position: relative;
  padding: 1rem 0 1rem 1rem;
  background-color: rgba(44, 152, 255, 0.25);
  max-width: 876px;
  margin: auto;
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;

  .breadcrumbs {
    flex-basis: 100%;
    display: flex;
    align-items: center;
    font-weight: 600;
    color: #003e78;

    span {
      display: inline-flex;
      margin: 0 0.4rem;
      color: #005eb8;

      .text {
        line-height: 2;
        padding-left: .5rem;
        color: #005eb8;
      }
    }

    img {
      width: 2rem;
      height: 2rem;
    }
  }

  h1 {
    flex-basis: 100%;
    margin: 1rem 0;
    font-size: 2rem;
    font-weight: 600;
  }

  p {
    margin-bottom: 1rem;
    flex-basis: 100%;
  }

  .card {

    a {
      text-decoration: none;
      color: #005eb8;
    }

    &_header-text {
      flex-grow: 1;
    }
  }
}

.ward-beds-top-bar {
  display: flex;
  max-width: 876px;
  margin: auto;

  .header {
    font-size: 1.5rem;
    font-weight: 600;
    padding: 1.5rem 1rem;
    width: calc(100% - 174px);
  }

  .link-button {
    border-radius: 4px;
    background-color: white;
    height: 48px;
    width: 124px;
    text-align: center;
    line-height: 3.2;
    text-decoration: none;
    color: #005eb8;
    border: 1px solid rgba(0, 0, 0, 0.2);
    margin-top: 1rem;
  }
}

.ward-beds {
  max-width: 876px;
  margin: auto;

  .header {
    display: inline-flex;
    white-space: nowrap;
    justify-content: space-between;
    width: calc(100% - 4rem);
    height: 24px;
    background-color: #003e78;
    padding: .6rem 2rem 1rem;

    &--column {
      font-size: .75rem;
      width: 25%;
      color: white;
      line-height: 3;

      .icon {
        max-height: 18px;
        position: relative;
        top: 0.2rem;
        padding-right: .25rem;
      }
    }
  }

  &_card {
    display: flex;
    justify-content: space-between;
    width: calc(100% - 2rem);
    height: 1.125rem;
    background-color: white;
    padding: 1rem 2rem 1rem 0;
    border-bottom: 2px solid #d8d8d8;

    .bed-number {
      padding: 0 1rem;
    }

    .column {
      font-size: .75rem;
      display: inline-flex;
      width: 25%;
      
      &--available {
        width: 100%;
      }

      .icon {
        min-width: 26px;
        padding-right: .2rem;

        &.tick {
          min-width: 18px;
          max-height: 18px;
          padding-left: 0.5rem;
        }
      }
    }
  }
}

.add-beds {
  position: relative;
  padding: 2rem;

  h1 {
    font-size: 1.5rem;
    font-weight: 600;
  }

  p {
    margin: 0.5rem 0 2rem;
  }

  input {
    margin: 0.5rem 0;
    width: 5rem;
  }

  button {
    margin-top: 2rem;
  }

  .help-text {
    font-size: 0.75rem;
    color: #737373;
  }

  .error {
    color: #e30a0a;
  }
}

